<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="vertical"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">
    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="2">
        <TableRow>
            <TextView
                android:text="@string/tddname" android:gravity="center_vertical|right"/>
            <TextView
                android:text=":" android:gravity="center_vertical"/>
            <EditText
                android:id="@+id/tddname"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/tddtitle" android:gravity="center_vertical|right"/>
            <TextView
                android:text=":" android:gravity="center_vertical"/>
            <EditText
                android:id="@+id/tddtitle"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/tdddatatype"
                android:layout_height="fill_parent" 
                android:gravity="center_vertical|right"
            />
            <TextView
                android:text=":" android:gravity="center_vertical"/>
            <Spinner
                android:id="@+id/tdddatatype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"/>
        </TableRow>
        <TableRow>
            <TableLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:layout_span="2">
                <TableRow>
                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="2dip"
                        android:background="#00000000"/>

                    <Button
                        android:id="@+id/ttdsave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save"/>
                </TableRow>
            </TableLayout>
        </TableRow>
    </TableLayout>
</ScrollView>