<?xml version="1.0" encoding="utf-8"?>
<TableLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:stretchColumns="1"
	android:layout_height="fill_parent">
	<TableRow>
		<View
			android:layout_width="fill_parent"
			android:layout_height="2dip"
			android:background="#FFFFFFFF"
			android:layout_span="3"/>
	</TableRow>
    <TableRow>
			<LinearLayout
				 xmlns:android="http://schemas.android.com/apk/res/android"
				 android:layout_height="wrap_content"
				 android:layout_width="fill_parent"
				 android:orientation="horizontal"
				 android:layout_span="3"
				 android:weightSum="1.0"
				 android:background="@drawable/fields_header"
		    >  
		        <TextView
		            android:text="@string/tddtitle"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:layout_weight=".38"
		            android:textAppearance="@style/FieldsHeaderTextAppearance"
		            />
		        <TextView
		            android:text="@string/tddname"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:layout_weight=".38"
                    android:textAppearance="@style/FieldsHeaderTextAppearance"
		            />      
		        <TextView
		            android:text="@string/tdddatatype"
		            android:layout_width="0dip"
		            android:layout_height="wrap_content"
		            android:layout_weight=".24"
                    android:textAppearance="@style/FieldsHeaderTextAppearance"
		            />
		</LinearLayout>
    </TableRow>
	<TableRow
		android:layout_height="fill_parent"
		android:layout_gravity="fill_vertical|fill"
		android:layout_weight="2">
		<ListView
			android:id="@+id/tripdatadeflist"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_span="3"
			android:layout_gravity="fill_vertical|fill"
			android:scrollbars="vertical"/>
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_gravity="bottom|fill_vertical">
		<TableLayout
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:stretchColumns="2"
			android:layout_span="3">
			<TableRow>
                <ImageButton
                    android:id="@+id/addttd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/android:ic_input_add"/>
				<View
					android:layout_width="fill_parent"
					android:layout_height="2dip"
					android:layout_span="3"/>
				<Button
					android:id="@+id/closefields"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/close"/>
			</TableRow>
		</TableLayout>
	</TableRow>
</TableLayout>
